<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MediaSLAYER</string>
    <string name="action_settings">Settings</string>
    <string name="new_connection_label">[+  connection]</string>
    <string name="up_directory">. . </string>
	<string name="server_address">Server Address</string>
	<string name="user_name">Username</string>
	<string name="user_password">Password</string>
	<string name="http_type">HTTP/S</string>
	<string name="ftp_type">FTP</string>
	<string name="submit_button">Submit</string>
	<string name="connection_label">Label</string>
	<string name="select_local">[media on device]</string>
</resources>
